# aster

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  clean.sh  debug-aster.sh  docker-compose.yaml  send_metrics.sh
.cargo-husky/hooks/: pre-commit
.github/: release-drafter.yml
.github/workflows/: ci.yaml  drafter.yaml  release.yaml
aggregator/: Cargo.toml  sqlx-data.json
aggregator/migrations/: 20230606135719_aggregation_tables.sql
aggregator/src/: lib.rs  main.rs
aggregator/src/bills/: aggregators.rs  billable_controller.rs  mod.rs  tables.rs
alerting/: Cargo.toml  sqlx-data.json
alerting/docs/: alerting.md  graphql-server.md
alerting/migrations/: 20230606141650_alerting.sql
alerting/src/: lib.rs
alerting/src/controllers/: billable.rs  mod.rs  rule.rs
alerting/src/models/: alert.rs  alerting_rule.rs  mod.rs
alerting/src/models/database/: fetch_alerting_rule.rs  insert_alerting_rule.rs  mod.rs
alerting/src/models/dtos/: alerting_rule.rs  mod.rs
alerting/src/models/input/: alerting_rule.rs
alerting/src/services/: billable.rs  database.rs  mod.rs  rule.rs
aster/: Cargo.toml
aster/src/: main.rs
billable/: Cargo.toml
billable/src/: billable_builder_service.rs  lib.rs  transformer.rs
billing/: Cargo.toml  sqlx-data.json
billing/src/: lib.rs  main.rs
billing/src/controller/: billing.rs  mod.rs
billing/src/db_models/: mod.rs
billing/src/graphql_schemas/: mod.rs  structures.rs
billing/src/models/: mod.rs
billing/src/schemas/: input.rs  mod.rs  output.rs  structures.rs
billing/src/services/: database.rs  mod.rs
collector/: Cargo.toml
collector/src/: lib.rs
collector/src/metric/: metric_controller.rs  mod.rs  model.rs
common/: Cargo.toml
common/src/: lib.rs
common/src/messaging/: crossbeam_messaging.rs  mod.rs
common/src/messaging/crossbeam/: billable.rs  metric.rs  mod.rs
common/src/messaging/tokio_broadcast/: billable.rs  billable_rule.rs  metric.rs  mod.rs
common/src/models/: billable.rs  billable_rule.rs  metrics.rs  mod.rs
common/src/models/billable_rules/: billable_rule.rs  billable_rule_dto.rs  billable_rule_persistent.rs  billable_rule_update.rs  mod.rs
common/src/monitoring/: mod.rs
common/src/services/: mod.rs
connector/: Cargo.toml  sqlx-data.json
connector/src/: lib.rs
controller/: Cargo.toml  sqlx-data.json
controller/migrations/: 20230606161739_add_version_to_billable_rule.sql
controller/src/: billable_rule_service.rs  lib.rs  routes.rs
dashboard/: Cargo.toml  README.md
dashboard/src/: lib.rs  router.rs
dashboard/src/dto/: billable.rs  mod.rs
dashboard/src/dto/filters/: frequency.rs  mod.rs  operator.rs
dashboard/src/routes/: billables.rs  mod.rs
docs/: architecture.md
frontend/: .eslintrc.js  .prettierrc  README.md  db.js  package-lock.json  package.json
frontend/public/: index.html  manifest.json
frontend/src/: index.tsx
frontend/src/common/api/: index.ts  index.tsx  swr.ts  urlUtils.ts
frontend/src/common/components/: AppLayout.tsx  LoadingWrapper.tsx  MessageWrapper.tsx  Navbar.tsx  Redirect.tsx  SimpleSelect.tsx  theme.ts
frontend/src/common/contexts/: AccountContext.tsx
frontend/src/common/graphql/: index.ts
frontend/src/common/models/: account.ts
frontend/src/common/navigation/: AsterHome.tsx  Layout.tsx  Routes.tsx  index.ts  models.ts
frontend/src/controller/: Routes.tsx
frontend/src/controller/components/: ControllerRuleControl.tsx  ControllerRuleCreate.tsx  ControllerRuleEdit.tsx  ControllerRuleList.tsx  RuleEditor.tsx  RuleIteam.tsx  RuleList.tsx
frontend/src/controller/model/: api.ts  rule.ts
frontend/src/dashboard/: Routes.tsx
frontend/src/dashboard/components/: BillableChart.tsx  BillableChartControl.tsx  Costs.tsx  DashboardHome.tsx  Earnings.tsx  hello.tsx
frontend/src/dashboard/model/: api.ts  billable.ts  billableFilter.ts  chartItem.ts
frontend/src/invoice/: Layout.tsx  Routes.tsx
frontend/src/invoice/api/: api.ts  invoices.ts
frontend/src/invoice/components/: InvoiceCard.tsx
frontend/src/invoice/model/: index.ts
frontend/src/metrics/: Routes.tsx
frontend/src/notifier/: Routes.tsx
frontend_server/: Cargo.toml
frontend_server/src/: lib.rs
migrations/: 20230531142339_initial-tables.sql  20230606141650_alerting.sql  20230607123256_non-null-aggregates.sql  20230607163654_aggregates-not-null.sql  20230607164458_billing.sql
notification/: Cargo.toml
notification/docs/: notification.md
notification/src/: lib.rs
notification/src/controllers/: channel.rs
notification/src/models/: channel.rs  mod.rs  notification.rs
notification/src/services/: channel.rs  notification.rs
scripts/: create_schema.sh
