[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio-postgres = "0.7.8"
futures-util = "0.3.28"
env_logger = "0.10.0"
log = "0.4.18"
tokio = { version = "1.28.2", features = ["full"] }
