[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { version = "0.6.3", features = [ "uuid", "chrono", "postgres", "runtime-tokio-native-tls" ] }
futures-util = "0.3.28"
env_logger = "0.10.0"
log = "0.4.18"
tokio = { version = "1.28.2", features = ["full"] }
chrono = "0.4.26"
common = { path = "../common" }