[package]
name = "aggregator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { workspace = true , features = [ "uuid", "chrono", "postgres", "runtime-tokio-native-tls" ] }
futures-util = "0.3.28"
env_logger = "0.10.0"
log = { workspace = true }
tokio = { workspace = true, features = ["full"] }
chrono = { workspace = true }
common = { path = "../common" }
async-trait = { workspace = true }
anyhow = { workspace = true }
