[package]
name = "alerting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.26"
common = { path = "../common" }
async-trait = "0.1.68"
notification = { path = "../notification" }
anyhow = "1.0.71"
log = "0.4.18"
async-graphql = { version = "5.0.9", features = ["dynamic-schema"]}
async-graphql-axum = "5.0.9"
axum = "0.6.18"
tokio = { version = "1.21.0", features = ["full","tracing"] }