[package]
name = "alerting"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { workspace = true }
common = { path = "../common" }
async-trait = { workspace = true }
notification = { path = "../notification" }
anyhow = { workspace = true }
log = { workspace = true }
async-graphql = { workspace = true , features = ["dynamic-schema"]}
async-graphql-axum = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["full","tracing"] }

