[package]
name = "aster"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10.0"
futures = "0.3.28"
log = "0.4.18"
tokio = { version = "1.21.0", features = ["full"] }

aggregator = { path = "../aggregator" }
alerting = { path = "../alerting" }
billable = { path = "../billable" }
billing = { path = "../billing" }
collector = { path = "../collector" }
common = { path = "../common" }
connector = { path = "../connector" }
controller = { path = "../controller" }
dashboard = { path = "../dashboard" }
notification = { path = "../notification" }
frontend_server = { path = "../frontend_server" }
anyhow = "1.0.71"

[dev-dependencies.cargo-husky]
version = "1"
default-features = false
features = ["user-hooks"]
