[package]
name = "billing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
async-graphql = {  workspace = true , features = ["dynamic-schema"]}
async-graphql-axum = { workspace = true }
axum = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"]}
async-trait = { workspace = true }
log = { workspace = true }
anyhow = { workspace = true }
