[package]
name = "billing"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-graphql = { workspace = true, features = ["dynamic-schema", "chrono", "chrono-tz"] }
async-graphql-axum = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
common = { path = "../common" }
log = { workspace = true }
serde = { workspace = true, features = ["derive"] }
serde_json = "1.0.96"
sqlx = { workspace = true, features = [ "runtime-tokio-native-tls", "postgres", "macros", "json", "bigdecimal", "offline", "chrono", "time" ] }
tokio = { workspace = true, features = ["full","tracing"] }
