[package]
name = "common"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
async-channel = "1.8.0"
thiserror = "1.0.40"
chrono = "0.4.26"
anyhow = "1.0.71"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls" ] }
