[package]
name = "connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
async-trait = "0.1.51"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "postgres" ] }
