[package]
name = "connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
async-trait = "0.1.51"
sqlx = { version = "0.6.3", features = [ "runtime-tokio-native-tls", "postgres", "chrono" ] }
anyhow = "1.0.71"
thiserror = "1.0.40"
crossbeam-channel = "0.5.1"
chrono = "0.4.26"
log = "0.4.18"
