[package]
name = "connector"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
async-trait = { workspace = true }
sqlx = { workspace = true , features = [ "runtime-tokio-native-tls", "postgres", "chrono", "offline" ] }
anyhow = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
log = { workspace = true }
