[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
async-trait = "0.1.51"
anyhow = "1.0.71"
async-graphql = "5.0.9"
async-graphql-axum = "5.0.9"
log = "0.4.18"
axum = { version = "0.6.18", features = ["macros"] }
tokio = { version = "1.28.2", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "time", "uuid", "offline"] }
