[package]
name = "controller"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
common = { path = "../common" }
async-trait = { workspace = true }
anyhow = { workspace = true }
log = { workspace = true }
axum = { workspace = true, features = ["macros"] }
axum-macros = { workspace = true }
tokio = { workspace = true, features = ["macros", "rt-multi-thread"] }
tower-http = { workspace = true, features = ["cors"] }
sqlx = { workspace = true, features = [
  "runtime-tokio-native-tls",
  "postgres",
  "time",
  "uuid",
  "offline",
] }
