[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.71"
async-trait = "0.1.68"
axum = "0.6.18"
log = "0.4.18"
sqlx = { version = "0.6.3", features = ["runtime-tokio-native-tls", "postgres", "chrono"  ] }
tokio = { version = "1.12.0", features = ["full"] }
common = { path = "../common" }