[package]
name = "dashboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
axum = { workspace = true }
log = { workspace = true }
sqlx = { workspace = true, features = [
  "runtime-tokio-native-tls",
  "postgres",
  "chrono",
] }
tokio = { workspace = true, features = ["full"] }
common = { path = "../common" }
serde = { workspace = true, features = ["derive"] }
chrono = { version = "0.4.26", features = ["serde"] }
