[package]
name = "frontend_server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
async-trait = "0.1.68"
axum = "0.6.18"
tokio = { version = "1.12.0", features = ["full"] }
common = { path = "../common" }
tower = { version = "0.4.13", features = ["util"] }
tower-http = { version = "0.4.0", features = ["fs"] }
anyhow = "1.0.71"
